# userdmp

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/handles/: Cargo.toml  main.rs
examples/handles/src/: main.rs
examples/memorys/: Cargo.toml  main.rs
examples/memorys/src/: main.rs
examples/modules/: Cargo.toml
examples/modules/src/: main.rs
examples/system/: Cargo.toml  main.rs
examples/system/src/: main.rs
examples/threads/: Cargo.toml
examples/threads/src/: main.rs
src/: data.rs  error.rs  lib.rs  mapper.rs  parse.rs
