[package]
name = "userdmp"
version = "0.1.2"
edition = "2024"
description = "A library in Rust for parsing Minidump (.dmp) files generated in user mode on Windows"
license = "MIT"
repository = "https://github.com/joaoviictorti/userdmp"
homepage = "https://github.com/joaoviictorti/userdmp"
readme = "README.md"
keywords = ["user","minidump", "windows", "rust"]
categories = ["os", "filesystem"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
binrw = "0.15.0"
bytemuck = "1.21.0"
thiserror = "2.0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Security", "Win32_System_Memory"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"